--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxhte78DueP6xLwsOWmxBG",
+      "authorship_tag": "ABX9TyO3M06afMqdBvOjvcg/rKW6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,47 +95,52 @@
         "        registrar_log(f\"{symbol} - No se encontraron noticias\")\n",
         "        return\n",
         "\n",
+        "    # Calcular sentiment\n",
         "    df[\"vader_sentiment\"] = df[\"title\"].apply(lambda x: vader_analyzer.polarity_scores(x)[\"compound\"])\n",
-        "    df[\"finbert_sentiment\"] = 0  # Placeholder, puedes calcular FinBERT aquí si quieres\n",
+        "    df[\"finbert_sentiment\"] = 0  # Placeholder para FinBERT\n",
         "\n",
-        "    # Calcula promedio de Vader\n",
+        "    # Promedios\n",
         "    vader_promedio = df[\"vader_sentiment\"].mean()\n",
         "    finbert_promedio = df[\"finbert_sentiment\"].mean()\n",
         "\n",
-        "    # Actualiza _datos.txt\n",
+        "    # Actualizar _datos.txt\n",
         "    actualizar_sentimiento(symbol, vader_promedio, finbert_promedio)\n",
         "\n",
-        "    df.to_csv(f\"logs/{symbol}_nuevas_agregadas_{pd.Timestamp.utcnow().date()}.csv\", index=False)\n",
+        "    # Guardar log de noticias nuevas\n",
+        "    today_str = pd.Timestamp.utcnow().date()\n",
+        "    df.to_csv(f\"logs/{symbol}_nuevas_agregadas_{today_str}.csv\", index=False)\n",
         "    registrar_log(f\"{symbol} - Guardadas {len(df)} noticias con sentiment\")\n",
         "\n",
-        "\n",
         "def actualizar_sentimiento(symbol, vader, finbert=0):\n",
-        "    import os\n",
-        "    hoy = pd.Timestamp.utcnow().date().strftime(\"%Y-%m-%d\")\n",
         "    filename = f\"{symbol}_datos.txt\"\n",
+        "    hoy = pd.Timestamp.utcnow().date().strftime(\"%Y-%m-%d\")\n",
+        "    hoy_date = pd.to_datetime(hoy).date()\n",
         "\n",
         "    if not os.path.exists(filename):\n",
-        "        # Si el archivo no existe, crearlo con solo la columna sentiment\n",
-        "        with open(filename, \"w\", encoding=\"utf-8\") as f:\n",
-        "            f.write(f\"timestamp,vader_sentiment,finbert_sentiment\\n\")\n",
-        "            f.write(f\"{hoy},{vader},{finbert}\\n\")\n",
+        "        df = pd.DataFrame({\n",
+        "            \"timestamp\": [hoy_date],\n",
+        "            \"vader_sentiment\": [vader],\n",
+        "            \"finbert_sentiment\": [finbert]\n",
+        "        })\n",
+        "        df.to_csv(filename, sep=\",\", index=False)\n",
+        "        registrar_log(f\"{symbol} - Archivo creado con sentiment inicial\")\n",
         "        return\n",
         "\n",
         "    # Leer archivo existente\n",
-        "    df = pd.read_csv(filename, sep=\"\\t\")\n",
+        "    df = pd.read_csv(filename, sep=\",\")\n",
         "    df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"], errors=\"coerce\").dt.date\n",
         "\n",
-        "    # Si ya hay línea de hoy, actualizar\n",
-        "    if hoy in df[\"timestamp\"].astype(str).values:\n",
-        "        df.loc[df[\"timestamp\"] == pd.to_datetime(hoy).date(), \"vader_sentiment\"] = vader\n",
-        "        df.loc[df[\"timestamp\"] == pd.to_datetime(hoy).date(), \"finbert_sentiment\"] = finbert\n",
+        "    # Actualizar o agregar línea de hoy\n",
+        "    if hoy_date in df[\"timestamp\"].values:\n",
+        "        df.loc[df[\"timestamp\"] == hoy_date, \"vader_sentiment\"] = vader\n",
+        "        df.loc[df[\"timestamp\"] == hoy_date, \"finbert_sentiment\"] = finbert\n",
+        "        registrar_log(f\"{symbol} - Sentiment de hoy actualizado: Vader={vader:.4f}, FinBERT={finbert:.4f}\")\n",
         "    else:\n",
-        "        # Si no hay línea de hoy, agregar\n",
-        "        nueva = {\"timestamp\": hoy, \"vader_sentiment\": vader, \"finbert_sentiment\": finbert}\n",
+        "        nueva = {\"timestamp\": hoy_date, \"vader_sentiment\": vader, \"finbert_sentiment\": finbert}\n",
         "        df = pd.concat([df, pd.DataFrame([nueva])], ignore_index=True)\n",
+        "        registrar_log(f\"{symbol} - Nueva línea agregada: Vader={vader:.4f}, FinBERT={finbert:.4f}\")\n",
         "\n",
-        "    df.to_csv(filename, sep=\"\\t\", index=False)\n",
-        "    registrar_log(f\"{symbol} - Sentiment actualizado: Vader={vader}, FinBERT={finbert}\")\n",
+        "    df.to_csv(filename, sep=\",\", index=False)\n",
         "\n",
         "# ===============================================\n",
         "#           EJECUCIÓN PRINCIPAL\n",
