--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3M06afMqdBvOjvcg/rKW6",
+      "authorship_tag": "ABX9TyMOhbiZ/E4tAd8PfOTCkezC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,36 +111,54 @@
         "    df.to_csv(f\"logs/{symbol}_nuevas_agregadas_{today_str}.csv\", index=False)\n",
         "    registrar_log(f\"{symbol} - Guardadas {len(df)} noticias con sentiment\")\n",
         "\n",
-        "def actualizar_sentimiento(symbol, vader, finbert=0):\n",
-        "    filename = f\"{symbol}_datos.txt\"\n",
-        "    hoy = pd.Timestamp.utcnow().date().strftime(\"%Y-%m-%d\")\n",
-        "    hoy_date = pd.to_datetime(hoy).date()\n",
+        "def actualizar_sentimiento(symbol, vader_promedio, finbert_promedio):\n",
+        "    \"\"\"Actualiza el archivo de datos del símbolo con la información de sentimiento promedio.\"\"\"\n",
+        "    import pandas as pd\n",
+        "    import os\n",
+        "    from datetime import datetime\n",
         "\n",
-        "    if not os.path.exists(filename):\n",
-        "        df = pd.DataFrame({\n",
-        "            \"timestamp\": [hoy_date],\n",
-        "            \"vader_sentiment\": [vader],\n",
-        "            \"finbert_sentiment\": [finbert]\n",
-        "        })\n",
-        "        df.to_csv(filename, sep=\",\", index=False)\n",
-        "        registrar_log(f\"{symbol} - Archivo creado con sentiment inicial\")\n",
+        "    file_path = f\"datos_{symbol}.txt\"\n",
+        "    if not os.path.exists(file_path):\n",
+        "        print(f\"⚠️ Archivo no encontrado: {file_path}\")\n",
         "        return\n",
         "\n",
-        "    # Leer archivo existente\n",
-        "    df = pd.read_csv(filename, sep=\",\")\n",
-        "    df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"], errors=\"coerce\").dt.date\n",
+        "    df = pd.read_csv(file_path)\n",
+        "    print(f\"✅ Archivo cargado correctamente: {file_path}\")\n",
+        "    print(\"Columnas actuales:\", df.columns.tolist())\n",
         "\n",
-        "    # Actualizar o agregar línea de hoy\n",
-        "    if hoy_date in df[\"timestamp\"].values:\n",
-        "        df.loc[df[\"timestamp\"] == hoy_date, \"vader_sentiment\"] = vader\n",
-        "        df.loc[df[\"timestamp\"] == hoy_date, \"finbert_sentiment\"] = finbert\n",
-        "        registrar_log(f\"{symbol} - Sentiment de hoy actualizado: Vader={vader:.4f}, FinBERT={finbert:.4f}\")\n",
+        "    # --- Identificar columna de fecha ---\n",
+        "    date_col = None\n",
+        "    for col in df.columns:\n",
+        "        if col.lower() in [\"timestamp\", \"date\", \"fecha\", \"day\"]:\n",
+        "            date_col = col\n",
+        "            break\n",
+        "\n",
+        "    if date_col is None:\n",
+        "        print(\"⚠️ No se encontró columna de fecha. Se usará la fecha actual.\")\n",
+        "        df[\"timestamp\"] = datetime.now().date()\n",
         "    else:\n",
-        "        nueva = {\"timestamp\": hoy_date, \"vader_sentiment\": vader, \"finbert_sentiment\": finbert}\n",
-        "        df = pd.concat([df, pd.DataFrame([nueva])], ignore_index=True)\n",
-        "        registrar_log(f\"{symbol} - Nueva línea agregada: Vader={vader:.4f}, FinBERT={finbert:.4f}\")\n",
+        "        df[\"timestamp\"] = pd.to_datetime(df[date_col], errors=\"coerce\").dt.date\n",
         "\n",
-        "    df.to_csv(filename, sep=\",\", index=False)\n",
+        "    # --- Buscar la línea correspondiente a hoy ---\n",
+        "    hoy = datetime.now().date()\n",
+        "    mask = df[\"timestamp\"] == hoy\n",
+        "\n",
+        "    if mask.any():\n",
+        "        print(f\"🟢 Actualizando línea existente para {hoy} en {symbol}\")\n",
+        "        df.loc[mask, \"vader_sentiment\"] = vader_promedio\n",
+        "        df.loc[mask, \"finbert_sentiment\"] = finbert_promedio\n",
+        "    else:\n",
+        "        print(f\"🟡 No existe línea para {hoy}, agregando nueva.\")\n",
+        "        nueva_fila = pd.DataFrame({\n",
+        "            \"timestamp\": [hoy],\n",
+        "            \"vader_sentiment\": [vader_promedio],\n",
+        "            \"finbert_sentiment\": [finbert_promedio],\n",
+        "        })\n",
+        "        df = pd.concat([df, nueva_fila], ignore_index=True)\n",
+        "\n",
+        "    # --- Guardar el archivo actualizado ---\n",
+        "    df.to_csv(file_path, index=False)\n",
+        "    print(f\"💾 Archivo actualizado y guardado: {file_path}\")\n",
         "\n",
         "# ===============================================\n",
         "#           EJECUCIÓN PRINCIPAL\n",
