--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOhbiZ/E4tAd8PfOTCkezC",
+      "authorship_tag": "ABX9TyOEE9i9fWrmTo00O6lkFv0P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,7 @@
         "# ===============================================\n",
         "#             CERBERO PREMARKET\n",
         "#   Descarga noticias y calcula sentiment\n",
+        "#   (Actualiza el día anterior en los archivos *_datos.txt)\n",
         "# ===============================================\n",
         "\n",
         "import os\n",
@@ -46,7 +47,7 @@
         "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
         "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
         "import torch\n",
-        "import datetime\n",
+        "from datetime import datetime, timedelta\n",
         "from urllib.parse import quote\n",
         "\n",
         "# ===============================================\n",
@@ -63,7 +64,7 @@
         "            \"search_name\": search_name.strip()\n",
         "        }\n",
         "\n",
-        "# Inicialización Sentiment\n",
+        "# Inicialización de analizadores de sentimiento\n",
         "nltk.download('vader_lexicon')\n",
         "vader_analyzer = SentimentIntensityAnalyzer()\n",
         "finbert_tokenizer = AutoTokenizer.from_pretrained(\"yiyanghkust/finbert-tone\")\n",
@@ -74,7 +75,7 @@
         "# ===============================================\n",
         "\n",
         "def registrar_log(message, log_file=\"run_summary_pre.log\"):\n",
-        "    timestamp = datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+        "    timestamp = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
         "    with open(log_file, \"a\") as log:\n",
         "        log.write(f\"[{timestamp}] {message}\\n\")\n",
         "\n",
@@ -90,41 +91,47 @@
         "            \"title\": entry.title,\n",
         "            \"link\": entry.link\n",
         "        })\n",
+        "\n",
         "    df = pd.DataFrame(noticias)\n",
         "    if df.empty:\n",
         "        registrar_log(f\"{symbol} - No se encontraron noticias\")\n",
         "        return\n",
         "\n",
-        "    # Calcular sentiment\n",
+        "    # Calcular sentimiento con VADER (y placeholder para FinBERT)\n",
         "    df[\"vader_sentiment\"] = df[\"title\"].apply(lambda x: vader_analyzer.polarity_scores(x)[\"compound\"])\n",
-        "    df[\"finbert_sentiment\"] = 0  # Placeholder para FinBERT\n",
+        "    df[\"finbert_sentiment\"] = 0  # Puedes reemplazar con análisis FinBERT si lo deseas\n",
         "\n",
-        "    # Promedios\n",
+        "    # Calcular promedios\n",
         "    vader_promedio = df[\"vader_sentiment\"].mean()\n",
         "    finbert_promedio = df[\"finbert_sentiment\"].mean()\n",
         "\n",
-        "    # Actualizar _datos.txt\n",
+        "    # Actualizar el archivo de datos\n",
         "    actualizar_sentimiento(symbol, vader_promedio, finbert_promedio)\n",
         "\n",
-        "    # Guardar log de noticias nuevas\n",
+        "    # Guardar noticias procesadas\n",
         "    today_str = pd.Timestamp.utcnow().date()\n",
         "    df.to_csv(f\"logs/{symbol}_nuevas_agregadas_{today_str}.csv\", index=False)\n",
         "    registrar_log(f\"{symbol} - Guardadas {len(df)} noticias con sentiment\")\n",
         "\n",
         "def actualizar_sentimiento(symbol, vader_promedio, finbert_promedio):\n",
-        "    \"\"\"Actualiza el archivo de datos del símbolo con la información de sentimiento promedio.\"\"\"\n",
+        "    \"\"\"Actualiza la línea del DÍA ANTERIOR en el archivo datos_{symbol}.txt con el sentimiento promedio.\"\"\"\n",
         "    import pandas as pd\n",
         "    import os\n",
-        "    from datetime import datetime\n",
         "\n",
         "    file_path = f\"datos_{symbol}.txt\"\n",
         "    if not os.path.exists(file_path):\n",
         "        print(f\"⚠️ Archivo no encontrado: {file_path}\")\n",
+        "        registrar_log(f\"{symbol} - Archivo de datos no encontrado: {file_path}\")\n",
         "        return\n",
         "\n",
-        "    df = pd.read_csv(file_path)\n",
+        "    try:\n",
+        "        df = pd.read_csv(file_path)\n",
+        "    except Exception as e:\n",
+        "        registrar_log(f\"{symbol} - Error leyendo archivo {file_path}: {e}\")\n",
+        "        print(f\"❌ Error leyendo {file_path}: {e}\")\n",
+        "        return\n",
+        "\n",
         "    print(f\"✅ Archivo cargado correctamente: {file_path}\")\n",
-        "    print(\"Columnas actuales:\", df.columns.tolist())\n",
         "\n",
         "    # --- Identificar columna de fecha ---\n",
         "    date_col = None\n",
@@ -134,27 +141,30 @@
         "            break\n",
         "\n",
         "    if date_col is None:\n",
-        "        print(\"⚠️ No se encontró columna de fecha. Se usará la fecha actual.\")\n",
-        "        df[\"timestamp\"] = datetime.now().date()\n",
-        "    else:\n",
-        "        df[\"timestamp\"] = pd.to_datetime(df[date_col], errors=\"coerce\").dt.date\n",
+        "        registrar_log(f\"{symbol} - No se encontró columna de fecha en {file_path}\")\n",
+        "        print(\"⚠️ No se encontró columna de fecha, no se actualiza.\")\n",
+        "        return\n",
         "\n",
-        "    # --- Buscar la línea correspondiente a hoy ---\n",
-        "    hoy = datetime.now().date()\n",
-        "    mask = df[\"timestamp\"] == hoy\n",
+        "    df[\"timestamp\"] = pd.to_datetime(df[date_col], errors=\"coerce\").dt.date\n",
+        "\n",
+        "    # --- Buscar la línea del día ANTERIOR ---\n",
+        "    ayer = (datetime.now() - timedelta(days=1)).date()\n",
+        "    mask = df[\"timestamp\"] == ayer\n",
         "\n",
         "    if mask.any():\n",
-        "        print(f\"🟢 Actualizando línea existente para {hoy} en {symbol}\")\n",
+        "        print(f\"🟢 Actualizando línea existente para {ayer} en {symbol}\")\n",
         "        df.loc[mask, \"vader_sentiment\"] = vader_promedio\n",
         "        df.loc[mask, \"finbert_sentiment\"] = finbert_promedio\n",
+        "        registrar_log(f\"{symbol} - Sentimiento actualizado para {ayer}: Vader={vader_promedio:.3f}, FinBERT={finbert_promedio:.3f}\")\n",
         "    else:\n",
-        "        print(f\"🟡 No existe línea para {hoy}, agregando nueva.\")\n",
+        "        print(f\"🟡 No existe línea para {ayer}, agregando nueva fila.\")\n",
         "        nueva_fila = pd.DataFrame({\n",
-        "            \"timestamp\": [hoy],\n",
+        "            \"timestamp\": [ayer],\n",
         "            \"vader_sentiment\": [vader_promedio],\n",
         "            \"finbert_sentiment\": [finbert_promedio],\n",
         "        })\n",
         "        df = pd.concat([df, nueva_fila], ignore_index=True)\n",
+        "        registrar_log(f\"{symbol} - Nueva fila agregada para {ayer}\")\n",
         "\n",
         "    # --- Guardar el archivo actualizado ---\n",
         "    df.to_csv(file_path, index=False)\n",
@@ -167,7 +177,7 @@
         "for symbol, info in activos.items():\n",
         "    descargar_noticias_y_calcular_sentiment(symbol, info[\"search_name\"])\n",
         "\n",
-        "print(\"Completed premarket\")\n"
+        "print(\"✅ Completed premarket (sentiment del día anterior actualizado)\")\n"
       ]
     }
   ]
