--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEE9i9fWrmTo00O6lkFv0P",
+      "authorship_tag": "ABX9TyP6cuL/Z2rrbsa20m+4LLTV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,8 +117,7 @@
         "    \"\"\"Actualiza la línea del DÍA ANTERIOR en el archivo datos_{symbol}.txt con el sentimiento promedio.\"\"\"\n",
         "    import pandas as pd\n",
         "    import os\n",
-        "\n",
-        "    file_path = f\"datos_{symbol}.txt\"\n",
+        "    file_path = f\"{symbol}_datos.txt\"\n",
         "    if not os.path.exists(file_path):\n",
         "        print(f\"⚠️ Archivo no encontrado: {file_path}\")\n",
         "        registrar_log(f\"{symbol} - Archivo de datos no encontrado: {file_path}\")\n",
