--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6cuL/Z2rrbsa20m+4LLTV",
+      "authorship_tag": "ABX9TyPEQ7awSF4JETXrZadejvRh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,60 +114,44 @@
         "    registrar_log(f\"{symbol} - Guardadas {len(df)} noticias con sentiment\")\n",
         "\n",
         "def actualizar_sentimiento(symbol, vader_promedio, finbert_promedio):\n",
-        "    \"\"\"Actualiza la línea del DÍA ANTERIOR en el archivo datos_{symbol}.txt con el sentimiento promedio.\"\"\"\n",
+        "    \"\"\"Actualiza el archivo de datos del símbolo con la información de sentiment promedio.\"\"\"\n",
         "    import pandas as pd\n",
         "    import os\n",
-        "    file_path = f\"{symbol}_datos.txt\"\n",
+        "    from datetime import datetime, timedelta\n",
+        "\n",
+        "    file_path = f\"{symbol}_datos.txt\"  # asegúrate que coincida con tu repo\n",
         "    if not os.path.exists(file_path):\n",
         "        print(f\"⚠️ Archivo no encontrado: {file_path}\")\n",
-        "        registrar_log(f\"{symbol} - Archivo de datos no encontrado: {file_path}\")\n",
         "        return\n",
         "\n",
-        "    try:\n",
-        "        df = pd.read_csv(file_path)\n",
-        "    except Exception as e:\n",
-        "        registrar_log(f\"{symbol} - Error leyendo archivo {file_path}: {e}\")\n",
-        "        print(f\"❌ Error leyendo {file_path}: {e}\")\n",
-        "        return\n",
-        "\n",
+        "    # Leer CSV\n",
+        "    df = pd.read_csv(file_path, sep=\",\")  # tus archivos usan coma\n",
         "    print(f\"✅ Archivo cargado correctamente: {file_path}\")\n",
         "\n",
-        "    # --- Identificar columna de fecha ---\n",
-        "    date_col = None\n",
-        "    for col in df.columns:\n",
-        "        if col.lower() in [\"timestamp\", \"date\", \"fecha\", \"day\"]:\n",
-        "            date_col = col\n",
-        "            break\n",
+        "    # Forzar timestamp\n",
+        "    df['timestamp'] = pd.to_datetime(df['timestamp'], errors='coerce').dt.date\n",
         "\n",
-        "    if date_col is None:\n",
-        "        registrar_log(f\"{symbol} - No se encontró columna de fecha en {file_path}\")\n",
-        "        print(\"⚠️ No se encontró columna de fecha, no se actualiza.\")\n",
-        "        return\n",
-        "\n",
-        "    df[\"timestamp\"] = pd.to_datetime(df[date_col], errors=\"coerce\").dt.date\n",
-        "\n",
-        "    # --- Buscar la línea del día ANTERIOR ---\n",
-        "    ayer = (datetime.now() - timedelta(days=1)).date()\n",
-        "    mask = df[\"timestamp\"] == ayer\n",
+        "    # Día anterior\n",
+        "    ayer = (datetime.utcnow() - timedelta(days=1)).date()\n",
+        "    mask = df['timestamp'] == ayer\n",
         "\n",
         "    if mask.any():\n",
-        "        print(f\"🟢 Actualizando línea existente para {ayer} en {symbol}\")\n",
-        "        df.loc[mask, \"vader_sentiment\"] = vader_promedio\n",
-        "        df.loc[mask, \"finbert_sentiment\"] = finbert_promedio\n",
-        "        registrar_log(f\"{symbol} - Sentimiento actualizado para {ayer}: Vader={vader_promedio:.3f}, FinBERT={finbert_promedio:.3f}\")\n",
+        "        print(f\"🟢 Actualizando línea de ayer ({ayer}) en {symbol}\")\n",
+        "        df.loc[mask, 'vader'] = vader_promedio\n",
+        "        df.loc[mask, 'finbert'] = finbert_promedio\n",
         "    else:\n",
-        "        print(f\"🟡 No existe línea para {ayer}, agregando nueva fila.\")\n",
-        "        nueva_fila = pd.DataFrame({\n",
-        "            \"timestamp\": [ayer],\n",
-        "            \"vader_sentiment\": [vader_promedio],\n",
-        "            \"finbert_sentiment\": [finbert_promedio],\n",
-        "        })\n",
-        "        df = pd.concat([df, nueva_fila], ignore_index=True)\n",
-        "        registrar_log(f\"{symbol} - Nueva fila agregada para {ayer}\")\n",
+        "        print(f\"🟡 No se encontró línea para ayer ({ayer}), agregando nueva fila.\")\n",
+        "        nueva_fila = {'timestamp': ayer, 'vader': vader_promedio, 'finbert': finbert_promedio}\n",
+        "        # Llenar el resto de columnas con NaN o ceros\n",
+        "        for col in df.columns:\n",
+        "            if col not in nueva_fila:\n",
+        "                nueva_fila[col] = 0\n",
+        "        df = pd.concat([df, pd.DataFrame([nueva_fila])], ignore_index=True)\n",
         "\n",
-        "    # --- Guardar el archivo actualizado ---\n",
+        "    # Guardar CSV actualizado\n",
         "    df.to_csv(file_path, index=False)\n",
         "    print(f\"💾 Archivo actualizado y guardado: {file_path}\")\n",
+        "\n",
         "\n",
         "# ===============================================\n",
         "#           EJECUCIÓN PRINCIPAL\n",
