--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEQ7awSF4JETXrZadejvRh",
+      "authorship_tag": "ABX9TyMtpdLc0a7fvgqnovzmHcMF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,43 +114,62 @@
         "    registrar_log(f\"{symbol} - Guardadas {len(df)} noticias con sentiment\")\n",
         "\n",
         "def actualizar_sentimiento(symbol, vader_promedio, finbert_promedio):\n",
-        "    \"\"\"Actualiza el archivo de datos del símbolo con la información de sentiment promedio.\"\"\"\n",
-        "    import pandas as pd\n",
+        "    \"\"\"\n",
+        "    Actualiza el archivo *_datos.txt del símbolo con el sentiment promedio calculado.\n",
+        "    Se integra con el flujo del postmarket, respetando formato tab-separado.\n",
+        "    En premarket, actualiza la última fila (previa).\n",
+        "    \"\"\"\n",
         "    import os\n",
+        "    import pandas as pd\n",
         "    from datetime import datetime, timedelta\n",
         "\n",
-        "    file_path = f\"{symbol}_datos.txt\"  # asegúrate que coincida con tu repo\n",
-        "    if not os.path.exists(file_path):\n",
-        "        print(f\"⚠️ Archivo no encontrado: {file_path}\")\n",
+        "    filename = f\"{symbol}_datos.txt\"\n",
+        "\n",
+        "    # --- Cargar archivo existente ---\n",
+        "    if not os.path.exists(filename):\n",
+        "        print(f\"⚠️ Archivo no encontrado: {filename}. Creando nuevo archivo.\")\n",
+        "        # Crear DataFrame mínimo\n",
+        "        df = pd.DataFrame([{\n",
+        "            \"timestamp\": (datetime.utcnow().date() - timedelta(days=1)).strftime(\"%Y-%m-%d\"),\n",
+        "            \"vader\": vader_promedio,\n",
+        "            \"finbert\": finbert_promedio\n",
+        "        }])\n",
+        "        df.to_csv(filename, sep=\"\\t\", index=False)\n",
         "        return\n",
         "\n",
-        "    # Leer CSV\n",
-        "    df = pd.read_csv(file_path, sep=\",\")  # tus archivos usan coma\n",
-        "    print(f\"✅ Archivo cargado correctamente: {file_path}\")\n",
+        "    df = pd.read_csv(filename, sep=\"\\t\")\n",
+        "    print(f\"✅ Archivo cargado correctamente: {filename}\")\n",
         "\n",
-        "    # Forzar timestamp\n",
-        "    df['timestamp'] = pd.to_datetime(df['timestamp'], errors='coerce').dt.date\n",
+        "    # --- Preprocesar timestamps ---\n",
+        "    df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"], errors=\"coerce\")\n",
+        "    df[\"timestamp\"] = df[\"timestamp\"].dt.tz_localize(None)\n",
+        "    df[\"date_only\"] = df[\"timestamp\"].dt.date\n",
         "\n",
-        "    # Día anterior\n",
-        "    ayer = (datetime.utcnow() - timedelta(days=1)).date()\n",
-        "    mask = df['timestamp'] == ayer\n",
+        "    # --- Determinar fecha a actualizar: última fila (previa) ---\n",
+        "    last_date = df[\"date_only\"].max()\n",
+        "    last_idx = df[df[\"date_only\"] == last_date].index\n",
         "\n",
-        "    if mask.any():\n",
-        "        print(f\"🟢 Actualizando línea de ayer ({ayer}) en {symbol}\")\n",
-        "        df.loc[mask, 'vader'] = vader_promedio\n",
-        "        df.loc[mask, 'finbert'] = finbert_promedio\n",
+        "    if len(last_idx) == 0:\n",
+        "        print(\"⚠️ No se encontró fila para actualizar, agregando nueva fila.\")\n",
+        "        new_row = {\n",
+        "            \"timestamp\": (datetime.utcnow().date() - timedelta(days=1)).strftime(\"%Y-%m-%d\"),\n",
+        "            \"vader\": vader_promedio,\n",
+        "            \"finbert\": finbert_promedio\n",
+        "        }\n",
+        "        df = pd.concat([df, pd.DataFrame([new_row])], ignore_index=True)\n",
         "    else:\n",
-        "        print(f\"🟡 No se encontró línea para ayer ({ayer}), agregando nueva fila.\")\n",
-        "        nueva_fila = {'timestamp': ayer, 'vader': vader_promedio, 'finbert': finbert_promedio}\n",
-        "        # Llenar el resto de columnas con NaN o ceros\n",
-        "        for col in df.columns:\n",
-        "            if col not in nueva_fila:\n",
-        "                nueva_fila[col] = 0\n",
-        "        df = pd.concat([df, pd.DataFrame([nueva_fila])], ignore_index=True)\n",
+        "        # Actualizar valores de la última fila\n",
+        "        df.loc[last_idx, \"vader\"] = vader_promedio\n",
+        "        df.loc[last_idx, \"finbert\"] = finbert_promedio\n",
+        "        print(f\"🟢 Actualizado sentiment para {last_date} en fila {last_idx[0]}\")\n",
         "\n",
-        "    # Guardar CSV actualizado\n",
-        "    df.to_csv(file_path, index=False)\n",
-        "    print(f\"💾 Archivo actualizado y guardado: {file_path}\")\n",
+        "    # --- Guardar ---\n",
+        "    df.drop(columns=[\"date_only\"], inplace=True, errors=\"ignore\")\n",
+        "    df.to_csv(filename, sep=\"\\t\", index=False)\n",
+        "    print(f\"💾 Archivo actualizado y guardado: {filename} | Filas totales: {len(df)}\")\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "# ===============================================\n",
