--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtpdLc0a7fvgqnovzmHcMF",
+      "authorship_tag": "ABX9TyM2VLiULkfI4JXVIx9KJyiq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,25 +114,20 @@
         "    registrar_log(f\"{symbol} - Guardadas {len(df)} noticias con sentiment\")\n",
         "\n",
         "def actualizar_sentimiento(symbol, vader_promedio, finbert_promedio):\n",
-        "    \"\"\"\n",
-        "    Actualiza el archivo *_datos.txt del símbolo con el sentiment promedio calculado.\n",
-        "    Se integra con el flujo del postmarket, respetando formato tab-separado.\n",
-        "    En premarket, actualiza la última fila (previa).\n",
-        "    \"\"\"\n",
         "    import os\n",
         "    import pandas as pd\n",
         "    from datetime import datetime, timedelta\n",
         "\n",
         "    filename = f\"{symbol}_datos.txt\"\n",
         "\n",
-        "    # --- Cargar archivo existente ---\n",
         "    if not os.path.exists(filename):\n",
         "        print(f\"⚠️ Archivo no encontrado: {filename}. Creando nuevo archivo.\")\n",
-        "        # Crear DataFrame mínimo\n",
         "        df = pd.DataFrame([{\n",
         "            \"timestamp\": (datetime.utcnow().date() - timedelta(days=1)).strftime(\"%Y-%m-%d\"),\n",
         "            \"vader\": vader_promedio,\n",
-        "            \"finbert\": finbert_promedio\n",
+        "            \"finbert\": finbert_promedio,\n",
+        "            \"sentiment_ratio\": vader_promedio / (finbert_promedio+1e-9),\n",
+        "            \"sentiment_combined\": (vader_promedio + finbert_promedio)/2\n",
         "        }])\n",
         "        df.to_csv(filename, sep=\"\\t\", index=False)\n",
         "        return\n",
@@ -140,12 +135,10 @@
         "    df = pd.read_csv(filename, sep=\"\\t\")\n",
         "    print(f\"✅ Archivo cargado correctamente: {filename}\")\n",
         "\n",
-        "    # --- Preprocesar timestamps ---\n",
         "    df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"], errors=\"coerce\")\n",
         "    df[\"timestamp\"] = df[\"timestamp\"].dt.tz_localize(None)\n",
         "    df[\"date_only\"] = df[\"timestamp\"].dt.date\n",
         "\n",
-        "    # --- Determinar fecha a actualizar: última fila (previa) ---\n",
         "    last_date = df[\"date_only\"].max()\n",
         "    last_idx = df[df[\"date_only\"] == last_date].index\n",
         "\n",
@@ -154,19 +147,22 @@
         "        new_row = {\n",
         "            \"timestamp\": (datetime.utcnow().date() - timedelta(days=1)).strftime(\"%Y-%m-%d\"),\n",
         "            \"vader\": vader_promedio,\n",
-        "            \"finbert\": finbert_promedio\n",
+        "            \"finbert\": finbert_promedio,\n",
+        "            \"sentiment_ratio\": vader_promedio / (finbert_promedio+1e-9),\n",
+        "            \"sentiment_combined\": (vader_promedio + finbert_promedio)/2\n",
         "        }\n",
         "        df = pd.concat([df, pd.DataFrame([new_row])], ignore_index=True)\n",
         "    else:\n",
-        "        # Actualizar valores de la última fila\n",
         "        df.loc[last_idx, \"vader\"] = vader_promedio\n",
         "        df.loc[last_idx, \"finbert\"] = finbert_promedio\n",
+        "        df.loc[last_idx, \"sentiment_ratio\"] = vader_promedio / (finbert_promedio+1e-9)\n",
+        "        df.loc[last_idx, \"sentiment_combined\"] = (vader_promedio + finbert_promedio)/2\n",
         "        print(f\"🟢 Actualizado sentiment para {last_date} en fila {last_idx[0]}\")\n",
         "\n",
-        "    # --- Guardar ---\n",
         "    df.drop(columns=[\"date_only\"], inplace=True, errors=\"ignore\")\n",
         "    df.to_csv(filename, sep=\"\\t\", index=False)\n",
         "    print(f\"💾 Archivo actualizado y guardado: {filename} | Filas totales: {len(df)}\")\n",
+        "\n",
         "\n",
         "\n",
         "\n",
